# anneal

./: .gitignore  README.md  plot_progress.py  pyproject.toml  run_supervisor.py  try_runner.py
.claude/: settings.local.json
misc/: trace.json
misc/round_1/: coder_trajectory.json  patch.txt  review.txt  reviewer_task_notes.txt  reviewer_trajectory.json
misc/round_2/: coder_task_notes.txt  coder_trajectory.json  patch.txt  review.txt  reviewer_task_notes.txt  reviewer_trajectory.json
misc/swebench_test/pytest-dev__pytest-10051/: trace.json
misc/swebench_test/pytest-dev__pytest-10051/round_1/: coder_trajectory.json  reviewer_trajectory.json
seed_learnings/pytest-dev__pytest/: coder_learnings.txt  reviewer_learnings.txt
src/anneal/: evaluator.py  grader.py  main.py  run_dummy.py  runner.py  types.py  utils.py
src/anneal/agents/: __init__.py  base_coder.py  base_reviewer.py  factory.py  review_parser.py
src/anneal/alphaevolve/: __init__.py  fitness.py  island.py  proposer.py  rollout.py  supervisor.py  types.py
src/anneal/configs/: base_coder.yaml  base_reviewer.yaml
tasks/: caplog-assert-logged.md  flaky-test-retry.md  mark-timeout.md  raises-match-type.md
