[project]
name = "anneal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitpython>=3.1.46",
    "litellm>=1.82.1",
    "mini-swe-agent",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
]

[tool.uv.sources]
mini-swe-agent = { path = "external/mini-swe-agent", editable = true }
