[project]
name = "anneal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.0.0",
    "docker>=7.0.0",
    "gitpython>=3.1.46",
    "litellm>=1.82.1",
    "mini-swe-agent",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "swebench",
    "swe-rex",
    "boto3",
]

[tool.uv.sources]
mini-swe-agent = { path = "external/mini-swe-agent", editable = true }
swebench = { path = "external/swe-bench", editable = true }
swe-rex = { git = "https://github.com/SWE-agent/SWE-ReX.git", branch = "main" }
